tests/ui/imports/ambiguous-panic-rename-builtin.stderr
error: `env!()` takes 1 or 2 arguments
  --> $DIR/ambiguous-panic-rename-builtin.rs:12:5
   |
LL |     panic!();
   |     ^^^^^^^^

error[E0659]: `panic` is ambiguous
  --> $DIR/ambiguous-panic-rename-builtin.rs:12:5
   |
LL |     panic!();
   |     ^^^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a name from a glob import and an outer scope during import or macro resolution
note: `panic` could refer to the macro imported here
  --> $DIR/ambiguous-panic-rename-builtin.rs:9:5
   |
LL | use m1::*;
   |     ^^^^^
   = help: consider adding an explicit import of `panic` to disambiguate
   = help: or use `crate::panic` to refer to this macro unambiguously
note: `panic` could also refer to a macro from prelude
  --> $SRC_DIR/core/src/prelude/mod.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0659`.
